# printer_geo

./: .gitignore  Cargo.toml  build.rs  rustfmt.toml
benches/: benchmark.rs
examples/: python_bindings.py
shaders/: bbox.comp  drop.comp  drop.spv  drop_single.comp  partition.comp  partition.spv
shaders/glsl/: drop.comp  partition.comp
src/: avx.rs  bfs.rs  compute.rs  config.rs  geo.rs  geo_vulkan.rs  lib.rs  main.rs  simd.rs  sse.rs  stl.rs  tool.rs  util.rs
src/python/: compute_py.rs  config_py.rs  geo_py.rs  geo_vulkan_py.rs  mod.rs  stl_py.rs
src/tsp/: mod.rs  nn.rs  sim_anneal.rs  two_opt.rs  util.rs
src/vulkan/: compute.rs  mod.rs  utils.rs  vkcmd.rs  vkdescriptor.rs  vkfence.rs  vkmem.rs  vkpipeline.rs  vkshader.rs  vkstate.rs
