[package]
name = "printer_geo"
version = "0.1.5"
authors = ["Eric Trombly <etrombly@yahoo.com>"]
edition = "2018"

[lib]
name = "printer_geo"
crate-type = ["lib", "cdylib"]

[features]
python = ["pyo3"]

[dependencies]
stl = "0.2.0"
byteorder = "1.3.4"
simplesvg = "0.4.0"
rayon = "1.4.0"
vulkano = "0.19.0"
vulkano-shaders = "0.19.0"
thiserror = "1.0.20"
float-cmp = "0.8.0"
structopt = "0.3.17"
clap = "2.33.3"

[dependencies.ultraviolet]
version = "0.6.1"
features = ["serde"]

[dependencies.serde]
version = "1.0.116"
features =["derive"]

[dependencies.pyo3]
version = "0.12.0"
features = ["extension-module", "nightly"]
optional = true

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "benchmark"
harness = false
