[package]
name = "printer_geo"
version = "0.1.6"
authors = ["Eric Trombly <etrombly@yahoo.com>"]
edition = "2018"

[lib]
name = "printer_geo"
crate-type = ["lib", "cdylib"]

[features]
python = ["pyo3"]

[dependencies]
stl = "0.2.0"
byteorder = "1.3.4"
simplesvg = "0.4.0"
rayon = "1.4.1"
thiserror = "1.0.21"
float-cmp = "0.8.0"
structopt = "0.3.20"
clap = "2.33.3"
ash = "0.31.0"
rand = "0.7.3"
log = "0.4.11"
simplelog = "0.8.0"

[dependencies.ultraviolet]
version = "0.7.4"
features = ["serde"]

[dependencies.serde]
version = "1.0.116"
features =["derive"]

[dependencies.pyo3]
version = "0.12.3"
features = ["extension-module", "nightly"]
optional = true

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "benchmark"
harness = false
