[package]
name = "printer_geo"
version = "0.1.6"
authors = ["Eric Trombly <etrombly@yahoo.com>"]
edition = "2018"

[lib]
name = "printer_geo"
crate-type = ["lib", "cdylib"]

[features]
python = ["pyo3"]

[dependencies]
stl = "0.2.0"
byteorder = "1.4.2"
simplesvg = "0.4.0"
rayon = "1.5.0"
thiserror = "1.0.24"
float-cmp = "0.8.0"
structopt = "0.3.21"
clap = "2.33.3"
ash = "0.31.0"
rand = "0.8.3"
log = "0.4.14"
simplelog = "0.9.0"
serde_json = "1.0.62"

[dependencies.ultraviolet]
version = "0.7.5"
features = ["serde"]

[dependencies.serde]
version = "1.0.123"
features =["derive"]

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module", "nightly"]
optional = true

[build-dependencies]
shaderc = "0.7.1"
thiserror = "1.0.24"

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "benchmark"
harness = false
